# player-gui

./: .gitignore  CMakeLists.txt  README.md  config.h.in
include/media/: AudioPlayer.h  Controller.h  Decoder.h  RenderTimer.h
include/test/: winrt_capture.h
include/ui/: LivePage.h  PlayerApp.h  PlayerLivePage.h
lib/: agc_lib.lib  httplib.h  json.hpp  libspeexdsp.lib  speex_lib.lib
src/: Boot.cpp
src/media/: AUdioPlayer.cpp  Controller.cpp  Decoder.cpp  RenderTimer.cpp
src/test/: again.cpp  gdigrab.c  testVIdeoCapture.cpp  windowCapture.cpp  windowCapture2.cpp
src/ui/: LivePage.cpp  Player.cpp  Player.h  PlayerApp.cpp  PlayerLivePage.cpp  PlayerUi.fbp
